SPKParser.py
# Generated from SPK.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class SPKParser ( Parser ):

    grammarFileName = "SPK.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "<INVALID>", "'LOGICZNA'", "'FUNKCJA'", 
                     "'CA\u0141KOWITA'", "'LISTA'", "'U\u0141AMKOWA'", "'NAPIS'", 
                     "'JE\u017BELI'", "'TO'", "'INACZEJ'", "'DOP\u00D3KI'", 
                     "'DLA'", "'W'", "'WYPISZ'", "'D\u0141UGO\u015A\u0106'", 
                     "'OD'", "'DO'", "'ZWRACA'", "'STOP'", "'JAKO_CA\u0141KOWITA'", 
                     "'JAKO_U\u0141AMKOWA'", "'JAKO_NAPIS'", "'CZEKAJ'", 
                     "<INVALID>", "'LUB'", "'ORAZ'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'!'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'='", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "TYPE_NAME", "BOOL_", "FUN_", 
                      "INT", "LIST", "FLOATING", "STRING_", "IF_", "THEN_", 
                      "ELSE", "WHILE", "FOR", "IN", "PRINT_", "LENGTH", 
                      "FROM", "TO", "RETURNS", "BREAK_", "TO_INT", "TO_FLOAT", 
                      "TO_STRING", "SLEEP_", "BOOL_VALUE", "OR", "AND", 
                      "EQ", "NEQ", "GT", "LT", "GTEQ", "LTEQ", "PLUS", "MINUS", 
                      "MULT", "DIV", "MOD", "POW", "NOT", "VARIABLE_NAME", 
                      "INTEGER_NUMBER", "FLOAT_NUMBER", "STRING", "NON_ZERO_DIGIT", 
                      "DIGIT", "ASSIGN", "OPAR", "CPAR", "OBRACE", "CBRACE", 
                      "OSQBRACE", "CSQBRACE", "COMMENT", "SEP", "WS", "OTHER" ]

    RULE_program = 0
    RULE_bigStmt = 1
    RULE_if_stat = 2
    RULE_while_stat = 3
    RULE_for_loop = 4
    RULE_print_ = 5
    RULE_range_ = 6
    RULE_condition_block = 7
    RULE_condition = 8
    RULE_block = 9
    RULE_fblock = 10
    RULE_function_ = 11
    RULE_returnable = 12
    RULE_function_exec = 13
    RULE_arguments = 14
    RULE_arguments_exec = 15
    RULE_declaration = 16
    RULE_assignment = 17
    RULE_break_ = 18
    RULE_sleep_ = 19
    RULE_expr = 20
    RULE_atom = 21
    RULE_iterable = 22
    RULE_list_element = 23
    RULE_list_values = 24
    RULE_list_index = 25

    ruleNames =  [ "program", "bigStmt", "if_stat", "while_stat", "for_loop", 
                   "print_", "range_", "condition_block", "condition", "block", 
                   "fblock", "function_", "returnable", "function_exec", 
                   "arguments", "arguments_exec", "declaration", "assignment", 
                   "break_", "sleep_", "expr", "atom", "iterable", "list_element", 
                   "list_values", "list_index" ]

    EOF = Token.EOF
    T__0=1
    TYPE_NAME=2
    BOOL_=3
    FUN_=4
    INT=5
    LIST=6
    FLOATING=7
    STRING_=8
    IF_=9
    THEN_=10
    ELSE=11
    WHILE=12
    FOR=13
    IN=14
    PRINT_=15
    LENGTH=16
    FROM=17
    TO=18
    RETURNS=19
    BREAK_=20
    TO_INT=21
    TO_FLOAT=22
    TO_STRING=23
    SLEEP_=24
    BOOL_VALUE=25
    OR=26
    AND=27
    EQ=28
    NEQ=29
    GT=30
    LT=31
    GTEQ=32
    LTEQ=33
    PLUS=34
    MINUS=35
    MULT=36
    DIV=37
    MOD=38
    POW=39
    NOT=40
    VARIABLE_NAME=41
    INTEGER_NUMBER=42
    FLOAT_NUMBER=43
    STRING=44
    NON_ZERO_DIGIT=45
    DIGIT=46
    ASSIGN=47
    OPAR=48
    CPAR=49
    OBRACE=50
    CBRACE=51
    OSQBRACE=52
    CSQBRACE=53
    COMMENT=54
    SEP=55
    WS=56
    OTHER=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SPKParser.EOF, 0)

        def function_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.Function_Context)
            else:
                return self.getTypedRuleContext(SPKParser.Function_Context,i)


        def bigStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.BigStmtContext)
            else:
                return self.getTypedRuleContext(SPKParser.BigStmtContext,i)


        def getRuleIndex(self):
            return SPKParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SPKParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SPKParser.FUN_:
                self.state = 52
                self.function_()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPKParser.TYPE_NAME) | (1 << SPKParser.IF_) | (1 << SPKParser.WHILE) | (1 << SPKParser.FOR) | (1 << SPKParser.PRINT_) | (1 << SPKParser.BREAK_) | (1 << SPKParser.SLEEP_) | (1 << SPKParser.VARIABLE_NAME))) != 0):
                self.state = 58
                self.bigStmt()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(SPKParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BigStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stat(self):
            return self.getTypedRuleContext(SPKParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(SPKParser.While_statContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(SPKParser.For_loopContext,0)


        def declaration(self):
            return self.getTypedRuleContext(SPKParser.DeclarationContext,0)


        def SEP(self):
            return self.getToken(SPKParser.SEP, 0)

        def assignment(self):
            return self.getTypedRuleContext(SPKParser.AssignmentContext,0)


        def print_(self):
            return self.getTypedRuleContext(SPKParser.Print_Context,0)


        def function_exec(self):
            return self.getTypedRuleContext(SPKParser.Function_execContext,0)


        def break_(self):
            return self.getTypedRuleContext(SPKParser.Break_Context,0)


        def sleep_(self):
            return self.getTypedRuleContext(SPKParser.Sleep_Context,0)


        def getRuleIndex(self):
            return SPKParser.RULE_bigStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBigStmt" ):
                listener.enterBigStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBigStmt" ):
                listener.exitBigStmt(self)




    def bigStmt(self):

        localctx = SPKParser.BigStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bigStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 66
                self.if_stat()
                pass

            elif la_ == 2:
                self.state = 67
                self.while_stat()
                pass

            elif la_ == 3:
                self.state = 68
                self.for_loop()
                pass

            elif la_ == 4:
                self.state = 69
                self.declaration()
                self.state = 70
                self.match(SPKParser.SEP)
                pass

            elif la_ == 5:
                self.state = 72
                self.assignment()
                self.state = 73
                self.match(SPKParser.SEP)
                pass

            elif la_ == 6:
                self.state = 75
                self.print_()
                self.state = 76
                self.match(SPKParser.SEP)
                pass

            elif la_ == 7:
                self.state = 78
                self.function_exec()
                self.state = 79
                self.match(SPKParser.SEP)
                pass

            elif la_ == 8:
                self.state = 81
                self.break_()
                self.state = 82
                self.match(SPKParser.SEP)
                pass

            elif la_ == 9:
                self.state = 84
                self.sleep_()
                self.state = 85
                self.match(SPKParser.SEP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF_(self, i:int=None):
            if i is None:
                return self.getTokens(SPKParser.IF_)
            else:
                return self.getToken(SPKParser.IF_, i)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(SPKParser.Condition_blockContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(SPKParser.ELSE)
            else:
                return self.getToken(SPKParser.ELSE, i)

        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_if_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stat" ):
                listener.enterIf_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stat" ):
                listener.exitIf_stat(self)




    def if_stat(self):

        localctx = SPKParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_if_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(SPKParser.IF_)
            self.state = 90
            self.condition_block()
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 91
                    self.match(SPKParser.ELSE)
                    self.state = 92
                    self.match(SPKParser.IF_)
                    self.state = 93
                    self.condition_block() 
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SPKParser.ELSE:
                self.state = 99
                self.match(SPKParser.ELSE)
                self.state = 100
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SPKParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(SPKParser.ExprContext,0)


        def THEN_(self):
            return self.getToken(SPKParser.THEN_, 0)

        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_while_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stat" ):
                listener.enterWhile_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stat" ):
                listener.exitWhile_stat(self)




    def while_stat(self):

        localctx = SPKParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(SPKParser.WHILE)
            self.state = 104
            self.expr(0)
            self.state = 105
            self.match(SPKParser.THEN_)
            self.state = 106
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(SPKParser.FOR, 0)

        def VARIABLE_NAME(self):
            return self.getToken(SPKParser.VARIABLE_NAME, 0)

        def IN(self):
            return self.getToken(SPKParser.IN, 0)

        def iterable(self):
            return self.getTypedRuleContext(SPKParser.IterableContext,0)


        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)




    def for_loop(self):

        localctx = SPKParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_for_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(SPKParser.FOR)
            self.state = 109
            self.match(SPKParser.VARIABLE_NAME)
            self.state = 110
            self.match(SPKParser.IN)
            self.state = 111
            self.iterable()
            self.state = 112
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT_(self):
            return self.getToken(SPKParser.PRINT_, 0)

        def expr(self):
            return self.getTypedRuleContext(SPKParser.ExprContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_print_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_" ):
                listener.enterPrint_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_" ):
                listener.exitPrint_(self)




    def print_(self):

        localctx = SPKParser.Print_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_print_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(SPKParser.PRINT_)
            self.state = 115
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Range_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OSQBRACE(self):
            return self.getToken(SPKParser.OSQBRACE, 0)

        def FROM(self):
            return self.getToken(SPKParser.FROM, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.ExprContext)
            else:
                return self.getTypedRuleContext(SPKParser.ExprContext,i)


        def TO(self):
            return self.getToken(SPKParser.TO, 0)

        def CSQBRACE(self):
            return self.getToken(SPKParser.CSQBRACE, 0)

        def getRuleIndex(self):
            return SPKParser.RULE_range_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange_" ):
                listener.enterRange_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange_" ):
                listener.exitRange_(self)




    def range_(self):

        localctx = SPKParser.Range_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_range_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(SPKParser.OSQBRACE)
            self.state = 118
            self.match(SPKParser.FROM)
            self.state = 119
            self.expr(0)
            self.state = 120
            self.match(SPKParser.TO)
            self.state = 121
            self.expr(0)
            self.state = 122
            self.match(SPKParser.CSQBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(SPKParser.ConditionContext,0)


        def THEN_(self):
            return self.getToken(SPKParser.THEN_, 0)

        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_condition_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_block" ):
                listener.enterCondition_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_block" ):
                listener.exitCondition_block(self)




    def condition_block(self):

        localctx = SPKParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.condition()
            self.state = 125
            self.match(SPKParser.THEN_)
            self.state = 126
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SPKParser.ExprContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = SPKParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBRACE(self):
            return self.getToken(SPKParser.OBRACE, 0)

        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def CBRACE(self):
            return self.getToken(SPKParser.CBRACE, 0)

        def bigStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPKParser.BigStmtContext)
            else:
                return self.getTypedRuleContext(SPKParser.BigStmtContext,i)


        def getRuleIndex(self):
            return SPKParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SPKParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(SPKParser.OBRACE)
                self.state = 131
                self.block()
                self.state = 132
                self.match(SPKParser.CBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(SPKParser.OBRACE)
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 135
                    self.bigStmt()
                    self.state = 138 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPKParser.TYPE_NAME) | (1 << SPKParser.IF_) | (1 << SPKParser.WHILE) | (1 << SPKParser.FOR) | (1 << SPKParser.PRINT_) | (1 << SPKParser.BREAK_) | (1 << SPKParser.SLEEP_) | (1 << SPKParser.VARIABLE_NAME))) != 0)):
                        break

                self.state = 140
                self.match(SPKParser.CBRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(SPKParser.BlockContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_fblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFblock" ):
                listener.enterFblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFblock" ):
                listener.exitFblock(self)




    def fblock(self):

        localctx = SPKParser.FblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_fblock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN_(self):
            return self.getToken(SPKParser.FUN_, 0)

        def VARIABLE_NAME(self):
            return self.getToken(SPKParser.VARIABLE_NAME, 0)

        def OPAR(self):
            return self.getToken(SPKParser.OPAR, 0)

        def arguments(self):
            return self.getTypedRuleContext(SPKParser.ArgumentsContext,0)


        def CPAR(self):
            return self.getToken(SPKParser.CPAR, 0)

        def fblock(self):
            return self.getTypedRuleContext(SPKParser.FblockContext,0)


        def RETURNS(self):
            return self.getToken(SPKParser.RETURNS, 0)

        def returnable(self):
            return self.getTypedRuleContext(SPKParser.ReturnableContext,0)


        def getRuleIndex(self):
            return SPKParser.RULE_function_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_" ):
                listener.enterFunction_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_" ):
                listener.exitFunction_(self)




    def function_(self):

        localctx = SPKParser.Function_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(SPKParser.FUN_)
            self.state = 147
            self.match(SPKParser.VARIABLE_NAME)
            self.state = 148
            self.match(SPKParser.OPAR)
            self.state = 149
            self.arguments()
            self.state = 150
            self.match(SPKParser.CPAR)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SPKParser.RETURNS:
                self.state = 151
                self.match(SPKParser.RETURNS)
                self.state = 152
                self.returnable()


            self.state = 155
            self.fblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_NAME(self):
            return self.getToken(SPKParser.TYPE_NAME, 0)

        def VARIABLE_NAME(self):
            return self.getToken(SPKParser.VARIABLE_NAME, 0)

        def getRuleIndex(self):
            return SPKParser.RULE_returnable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnable" ):
                listener.enterReturnable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnable" ):
                listener.exitReturnable(self)




    def returnable(self):

        localctx = SPKParser.ReturnableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(SPKParser.TYPE_NAME)
            self.state = 158
            self.match(SPKParser.VARIABLE_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_execContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_NAME(self):
            return self.getToken(SPKParser.VARIABLE_NAME, 0)

        def OPAR(self):
            return self.getToken(SPKParser.OPAR, 0)

        def arguments_exec(self):
            return self.getTypedRuleContext(SPKParser.Arguments_execContext,0)


        def CPAR(self):
            return self.getToken(SPKParser.CPAR, 0)

        def getRuleIndex(self):
            return SPKParser.RULE_function_exec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_exec" ):
                listener.enterFunction_exec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_exec" ):
                listener.exitFunction_exec(self)




    def function_exec(self):

        localctx = SPKParser.Function_execContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_function_exec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
